syntax = "proto3";

package payment;

import "google/protobuf/timestamp.proto";

option go_package = "vibe-ddd-golang/api/proto/payment";

// Payment service definition
service PaymentService {
  // Create a new payment
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
  
  // Get a payment by ID
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
  
  // List payments with filtering
  rpc ListPayments(ListPaymentsRequest) returns (ListPaymentsResponse);
  
  // Update a payment
  rpc UpdatePayment(UpdatePaymentRequest) returns (UpdatePaymentResponse);
  
  // Delete a payment
  rpc DeletePayment(DeletePaymentRequest) returns (DeletePaymentResponse);
  
  // Get payments by user ID
  rpc GetUserPayments(GetUserPaymentsRequest) returns (GetUserPaymentsResponse);
}

// Payment status enum
enum PaymentStatus {
  PAYMENT_STATUS_UNSPECIFIED = 0;
  PAYMENT_STATUS_PENDING = 1;
  PAYMENT_STATUS_PROCESSING = 2;
  PAYMENT_STATUS_COMPLETED = 3;
  PAYMENT_STATUS_FAILED = 4;
  PAYMENT_STATUS_CANCELED = 5;
}

// Payment message
message Payment {
  uint32 id = 1;
  double amount = 2;
  string currency = 3;
  string description = 4;
  PaymentStatus status = 5;
  uint32 user_id = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// Create payment request
message CreatePaymentRequest {
  double amount = 1;
  string currency = 2;
  string description = 3;
  uint32 user_id = 4;
}

// Create payment response
message CreatePaymentResponse {
  Payment payment = 1;
}

// Get payment request
message GetPaymentRequest {
  uint32 id = 1;
}

// Get payment response
message GetPaymentResponse {
  Payment payment = 1;
}

// List payments request
message ListPaymentsRequest {
  int32 page = 1;
  int32 page_size = 2;
  PaymentStatus status = 3;
  uint32 user_id = 4;
}

// List payments response
message ListPaymentsResponse {
  repeated Payment payments = 1;
  int64 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// Update payment request
message UpdatePaymentRequest {
  uint32 id = 1;
  double amount = 2;
  string currency = 3;
  string description = 4;
  PaymentStatus status = 5;
}

// Update payment response
message UpdatePaymentResponse {
  Payment payment = 1;
}

// Delete payment request
message DeletePaymentRequest {
  uint32 id = 1;
}

// Delete payment response
message DeletePaymentResponse {
  bool success = 1;
}

// Get user payments request
message GetUserPaymentsRequest {
  uint32 user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

// Get user payments response
message GetUserPaymentsResponse {
  repeated Payment payments = 1;
  int64 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}